# second-brain

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
hooks/: post-commit.sample
references/: archive-template.md  article-template.md  index-template.md  presets.md  raw-template.md
tests/: conftest.py  test_graph.py  test_search.py  test_vault_state.py  test_watcher.py  test_wiki_io.py
tools/: __init__.py  _vault_state.py  _wiki_io.py  dashboard.py  graph.py  search.py  watcher.py
